realignes replay-buttons to correctly fit customize-domain-button in the header

--- a/app/domain-story.css
+++ b/app/domain-story.css
@@ -176,7 +176,7 @@ input{
 }
 
 .replayButtons {
-  margin-top: 1.3em;
+  margin-top: 1em;
 }
 
 #headline {
